# HighlyAutonomousAerialReconnaissanceRobot

./: README.md
Alpha/Current Code/Flight Control Software/GUI2_1/: CP5_Event.pde  CP5_Init.pde  Coverters.pde  GUI.pde  GUI2_1.pde  Read_Packet.pde  Server.pde  Text_Overlay.pde  Write_Packet.pde  Write_Packet.pde~  position_graph.pde  rate_graph.pde
Alpha/Current Code/Flight Control Software/GUI2_1/data/: FreeMono-24.vlw
Alpha/Current Code/Flight Control Software/Quadcopter_Main_rev13/: Angle_lock.ino  AutoPilot.ino  IMU_Functions.ino  IMU_Read.ino  Notes.ino  Optical_Flow.ino  Quadcopter_Main_rev13.ino  SERIAL_hs.ino  Sonar.ino
Alpha/Current Code/Groundstation ROS Packages/groundstation_ros/: CMakeLists.txt  package.xml
Alpha/Current Code/Groundstation ROS Packages/groundstation_ros/src/: processing-ros.cpp
Alpha/Current Code/Quadcopter ROS Packages/: CMakeLists.txt.user.yo6827  gccdump.s
Alpha/Current Code/Quadcopter ROS Packages/quadcopter_ros/: CMakeLists.txt  base_local_planner_params.yaml~  costmap_common_params.yaml~  global_costmap_params.yaml~  local_costmap_params.yaml~  package.xml
Alpha/Current Code/Quadcopter ROS Packages/quadcopter_ros/config/: costmap.yaml  costmap.yaml~
Alpha/Current Code/Quadcopter ROS Packages/quadcopter_ros/config/move_base/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml~  global_costmap_params.yaml  local_costmap_params.yaml~
Alpha/Current Code/Quadcopter ROS Packages/quadcopter_ros/launch/: start_slam-nav.launch  start_slam-nav.launch~  start_slam.launch~  system_start.launch  system_start.launch~
Alpha/Current Code/Quadcopter ROS Packages/quadcopter_ros/src/: controller_node.cpp  curiosity_node.cpp  explorer_node.cpp  serial_node.cpp  serial_node.cpp~
Alpha/Early Code/Old Code/Arduino/Quadcopter/: ESC FIRMWARE CMD.txt  test_code.txt
Alpha/Early Code/Old Code/Processing/Flight_Vizor_1_0/: CP5.pde  Camera.pde  Data.pde  Data_Visualization.pde  Filter_Data.pde  Flight_Vizor_1_0.pde  GUI.pde  Grid.pde  Images.pde  TextOverlay.pde
Alpha/Early Code/Old Code/Processing/Serial_test/: Serial_test.pde  read_Packets.pde  write_Packets.pde
Alpha/Early Code/Old Code/Processing/ball_bounce/: ball_bounce.pde
Alpha/Early Code/Old Code/Processing/time_waster_1000/: time_waster_1000.pde
Alpha/Early Code/OpenCV_Classifiers/door_classifier/: bg.txt  bg.txt~  doors.info  doors.vec
Alpha/Early Code/OpenCV_Classifiers/door_classifier/Negative/: neg_000.pgm  neg_001.pgm  neg_002.pgm  neg_003.pgm  neg_004.pgm  neg_005.pgm  neg_006.pgm  neg_007.pgm  neg_008.pgm  neg_009.pgm  neg_010.pgm  neg_011.pgm  neg_012.pgm  neg_013.pgm  neg_014.pgm  neg_015.pgm  neg_016.pgm  neg_017.pgm  neg_018.pgm  neg_019.pgm  neg_020.pgm  neg_021.pgm  neg_022.pgm  neg_023.pgm  neg_024.pgm  neg_025.pgm  neg_026.pgm  neg_027.pgm  neg_028.pgm  neg_029.pgm  neg_030.pgm  neg_031.pgm  neg_032.pgm  neg_033.pgm  neg_034.pgm  neg_035.pgm  neg_036.pgm  neg_037.pgm  neg_038.pgm  neg_039.pgm  (+2 more)
Alpha/Early Code/OpenCV_Classifiers/door_classifier_obsolete/: bg.txt  doors.info  doors.vec
Alpha/Early Code/Test Code/: i2cTest  i2cTest.c  i2cTest.py  i2cTest.py~
Alpha/Fritzing_schem/PCB/: teensy_bob_2.fzz  teensy_breakout_1.fzz
Alpha/Fritzing_schem/PCB/Teensy_BOB_2/: teensy_bob_2_contour.gm1  teensy_bob_2_copperBottom.gbl  teensy_bob_2_copperTop.gtl  teensy_bob_2_drill.txt  teensy_bob_2_maskBottom.gbs  teensy_bob_2_maskTop.gts  teensy_bob_2_pnp.txt  teensy_bob_2_silkBottom.gbo  teensy_bob_2_silkTop.gto
Alpha/Fritzing_schem/perfBoard/: Quadcopter_schem.fzz  Teensy_breakout.fzz  Teensy_breakout_bom.html  pd_perf.fzz
(+10131 files in other folders)
